fix: avoid layout shift by enabling scroll always

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -140,3 +140,7 @@ html[data-theme='light'] .hero > img {
 article.card {
 	border-radius: 0.5rem;
 }
+
+body {
+	overflow-y: scroll;
+}
